fixing back link

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -73,7 +73,7 @@
     </article>
     
     <nav class="navigation">
-        <a href="/">&larr; Back to Home</a>
+        <a href="{{ site.url }}">&larr; Back to Home</a>
     </nav>
 </body>
 </html>
